--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    <p><video src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" autoplay poster="posterimage.jpg">
+    </video></p>
+    <h1>Your personal travel guide</h1>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt=""></p>
+    <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt=""></p>
+    <h1>Coming Soon for iPhone and Android</h1>
+    <p>Download Excursion (Coming soon!)</p>
   </body>
 </html>
