--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming soon!)</a></p>
-    <p><video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg">
+    <p><video loop autoplay>
+      <source src="./resources/videos/excursion.mp4" poster="posterimage.jpg">
     </video></p>
-    <h1>Your personal travel guide</h1>
+    <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p><img src="./resources/images/camp.jpg" alt=""></p>
     <p><img src="./resources/images/phone.png" alt=""></p>
-    <h1>Coming Soon for iPhone and Android</h1>
-    <p>Download Excursion (Coming soon!)</p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    <p class="copyright">&copy; Excursion</p>
   </body>
 </html>
